--- a/algosms/myapp/templates/Analysis.html
+++ b/algosms/myapp/templates/Analysis.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Forex Trading Dashboard</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -27,69 +28,78 @@
         }
         .card {
             height: 600px;
+            background-color: #000;
+        }
+        .card-title {
+            text-align: center;
+        }
+        .tradingview-widget-container {
+            height: 100%;
+            width: 100%;
         }
     </style>
 </head>
 
 <body>
-    <div class="content">
-        {% comment %} <div class="row justify-content-center"> <!-- Center the content within the row --> {% endcomment %}
-         
-          {% comment %} <div class="content">
-            <div class="row"> {% endcomment %}
-              <div class="col-md-12">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12">
                 <div class="card">
-                  <div class="card-header">
-                    <h4 class="card-title">Live Dashboard</h4>
-                  </div>
-            <!-- TradingView Widget BEGIN -->
-            <div class="tradingview-widget-container" style="height:100%;width:100%">
-                <div class="tradingview-widget-container__widget" style="height:calc(100% - 32px);width:100%"></div>
-                <div class="tradingview-widget-copyright"><a href="https://www.finoways.com/" rel="noopener nofollow"
-                        target="_blank"><span class="blue-text">Track all markets on Finoways</span></a></div>
-                <script type="text/javascript"
-                    src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js" async>
-                        {
-                            "autosize": true,
+                    <div class="card-header">
+                        <h4 class="card-title">Live Rates</h4>
+                    </div>
+                    <!-- TradingView Widget BEGIN -->
+                    <div class="tradingview-widget-container">
+                        <div class="tradingview-widget-container__widget"></div>
+                        <div class="tradingview-widget-copyright">
+                            <a href="https://www.finoways.com/" rel="noopener nofollow" target="_blank">
+                                <span class="blue-text">Track all markets on Finoways</span>
+                            </a>
+                        </div>
+                        <script type="text/javascript"
+                            src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js" async>
+                            {
+                                "autosize": true,
                                 "symbol": "FOREXCOM:XAUUSD",
-                                    "interval": "D",
-                                        "timezone": "Etc/UTC",
-                                            "theme": "dark",
-                                                "style": "1",
-                                                    "locale": "en",
-                                                        "withdateranges": true,
-                                                            "hide_side_toolbar": false,
-                                                                "allow_symbol_change": true,
-                                                                    "watchlist": [
-                                                                        "FXOPEN:XAUUSD",
-                                                                        "OANDA:GBPJPY",
-                                                                        "OANDA:EURUSD",
-                                                                        "OANDA:EURJPY",
-                                                                        "OANDA:USDJPY",
-                                                                        "OANDA:GBPUSD",
-                                                                        "TVC:USOIL",
-                                                                        "OANDA:NZDUSD",
-                                                                        "BLACKBULL:US30",
-                                                                        "FX:USDCAD",
-                                                                        "TVC:DXY"
-                                                                    ],
-                                                                        "details": true,
-                                                                            "hotlist": true,
-                                                                                "calendar": false,
-                                                                                    "support_host": "https://www.tradingview.com"
-                        }
-                    </script>
+                                "interval": "D",
+                                "timezone": "Etc/UTC",
+                                "theme": "dark",
+                                "style": "1",
+                                "locale": "en",
+                                "withdateranges": true,
+                                "hide_side_toolbar": false,
+                                "allow_symbol_change": true,
+                                "watchlist": [
+                                    "FXOPEN:XAUUSD",
+                                    "OANDA:GBPJPY",
+                                    "OANDA:EURUSD",
+                                    "OANDA:EURJPY",
+                                    "OANDA:USDJPY",
+                                    "OANDA:GBPUSD",
+                                    "TVC:USOIL",
+                                    "OANDA:NZDUSD",
+                                    "BLACKBULL:US30",
+                                    "FX:USDCAD",
+                                    "TVC:DXY"
+                                ],
+                                "details": true,
+                                "hotlist": true,
+                                "calendar": false,
+                                "support_host": "https://www.tradingview.com"
+                            }
+                        </script>
+                    </div>
+                    <!-- TradingView Widget END -->
+                </div>
             </div>
-            <!-- TradingView Widget END -->
         </div>
-    
-        <!-- TradingView Widget END -->
-        <!-- TradingView Market Overview Widget END -->
     </div>
-    </div>
-    </body>
-    
-    </html>
-    
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+
+</html>
 
 {% endblock %}
