--- a/algosms/myapp/templates/client_base.html
+++ b/algosms/myapp/templates/client_base.html
@@ -85,7 +85,7 @@
       align-items: center;
       bottom: 100px;
       right: 20px;
-      transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease, width 0.3s ease, height 0.3s ease;
+      transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
       z-index: 1000;
     }
 
@@ -194,21 +194,6 @@
         padding: 10px;
       }
 
-      .power-button {
-        width: 50px;
-        height: 50px;
-        bottom: 20px;
-        right: 20px;
-      }
-
-      .power-button i {
-        font-size: 24px;
-      }
-
-      .power-button-text {
-        display: none;
-      }
-
       .card-custom {
         margin-top: 10px;
         font-size: smaller;
@@ -227,21 +212,6 @@
       .navbar-custom {
         height: auto;
         padding: 10px 10px;
-      }
-
-      .power-button {
-        width: 40px;
-        height: 40px;
-        bottom: 10px;
-        right: 10px;
-      }
-
-      .power-button i {
-        font-size: 20px;
-      }
-
-      .power-button-text {
-        display: none;
       }
 
       .card-custom {
